ODM 88 version