@@ -1,6 +1,29 @@
+# TJ Added Default definitions from http://www.ibm.com/support/knowledgecenter/SSEQTP_liberty/com.ibm.websphere.wlp.nd.multiplatform.doc/ae/twlp_admin_customvars.html
+# Set the maximum heap size to 1024m.
 -Xms1024m
--Xmx3584m
--Xmn256m
--XX:MaxMetaspaceSize=512m
--Dclient.encoding.override=UTF-8
--Dfile.encoding=UTF-8
+-Xmx4096m
+
+# Set a system property.
+ #-Dteamserver.disableSessionCache=true
+ # https://jazz004.hursley.ibm.com:9443/jazz/web/projects/Business%20Events%20And%20Rules#action=com.ibm.team.workitem.viewWorkItem&id=105832
+ #-Dparanoid.sessionCache.logging=true
+-Dcom.ibm.rules.decisioncenter.web.search.SearchProvider=SolrEmbedded
+-Dcom.ibm.rules.decisioncenter.web.search.SolrEmbeddedDataDir=c:/temp/DC-SearchIndex
+-Dilog.rules.teamserver.sync.debug=true
+-Dilog.rules.teamserver.web.synchronization.debug=true
+
+
+# Enable verbose output for class loading.
+#-verbose:class
+
+# Enable verbose garbage collection.
+#-verbose:gc
+
+# Specify an alternate verbose garbage collection log on IBM Java Virtual Machines only.
+#-Xverbosegclog:verbosegc.log
+
+# Specify additional verbose garbage collection options on HotSpot Java Virtual Machines only.
+#-Xloggc:verbosegc.log
+#-XX:+PrintGCDetails
+#-XX:+PrintGCTimeStamps
+#-XX:+PrintHeapAtGC
